Update and rename index.html to index.htm

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
         <tr>
           <td>
             <img
-            src="C:\Users\bvsve\Downloads\assignment\fsd\IMG_20220908_161813.jpg"
+            src="IMG_20220908_161813.jpg"
              alt="Profile Pic" height="300px" width="300px">
           </td>
      <td>
